# devops-mail-api

./: .dockerignore  .ebignore  .env  .gitignore  Dockerfile  Dockerrun.aws.json  README.md  alembic.ini  appspec.json  appspec.yaml  appspec.yml  buildspec.yml  docker-compose.yml  manage.py  pyproject.toml  taskdef.json
.ebextensions/: healthcheck.config  pre-run.config
.elasticbeanstalk/: config.yml
docs/: openapi.json
githooks/: pre-push
postman/: postman_collection.json
postman/collections/: postman_collection.json
src/: main.py  routes.py
src/application/services/: blacklist.py
src/domain/entities/: blacklists.py  errors.py  managment.py
src/domain/exceptions/: base.py
src/domain/repositories/: blacklist.py
src/infrastructure/adapters/input/api/: blacklist.py  health.py  root.py
src/infrastructure/adapters/output/db/: base.py  mixins.py  models.py  session.py
src/infrastructure/adapters/output/db/migrations/: env.py
src/infrastructure/adapters/output/repositories/: blacklist.py
src/infrastructure/commons/errors/: handlers.py
src/infrastructure/commons/logger/: base.py
src/infrastructure/commons/middlewares/: client_ip.py  jwt.py
src/infrastructure/commons/settings/: base.py  open_api_schema.py
src/infrastructure/dependencies/: repositories.py  services.py
terraform/: alb.tf  ecs.tf  iam.tf  logs.tf  networking.tf  outputs.tf  rds.tf  security_groups.tf  ssm.tf  variables.tf
tests/: conftest.py
tests/application/services/: blacklist_service_test.py
tests/infrastructure/adapters/input/api/: blacklist_controller_test.py
(+2 files in other folders)
